# inter-val-rs

./: Cargo.toml  README.md
src/: bound.rs  bound_type.rs  boundary.rs  bounding.rs  converters.rs  core.rs  general.rs  half.rs  idea1.rs  idea2.rs  impl_range_bounds.rs  inclusion.rs  interval.rs  interval_box.rs  kd.rs  lib.rs  ndim.rs  nullable.rs  pow.rs  std_range.rs  tests.rs  traits.rs
