[package]
name = "intervals"
version = "0.1.0"
edition = "2021"
authors = ["Yuichiro Terada <terada.yuichiro@gmail.com>"]
repository = "https://github.com/u1roh/intervals-rs"
documentation = "https://docs.rs/kd-tree"
keywords = ["interval", "math", "range"]
readme = "README.md"
description = "intervals, i.g., [a, b], (a, b), [a, b), and (a, b]"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
ordered-float = "4.2.0"
thiserror = "1.0.53"
